# core-native-gba

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  mainpage.lua
.github/workflows/: DOCS.yml
src/: core_native_gba.h  draw.c  draw_color.c  draw_line.c  draw_logo.c  draw_queue.c  draw_rect.c  draw_text.c  geoclip.c  keys.c  loop.c  main.c  pad.c  runtime.c  text.c  zeebo.h
